# AILive

./: .gitattributes  .gitignore  .gitmodules  .knownPackages  ADAPTHEON_FINAL_IMPLEMENTATION_REPORT.md  ADAPTHERON_FINAL_DOCUMENTATION.md  AILIVE-CODE-ERRORS.md  AILIVE-EXECUTIVE-SUMMARY.md  AILIVE-MASTER-IMPLEMENTATION-PLAN.md  AILIVE-NECESSARY-FILES.md  AILIVE-SUGGESTED-README.md  AILIVE_DEPENDENCY_MAP.md  AILive-code-map.md  AUDIT_VERIFICATION_REPORT.md  BRANCH_ANALYSIS_REPORT.md  BRANCH_CONTRIBUTIONS_SUMMARY.md  BUILD_FIX_SUMMARY.md  BUILD_LOG.md  BUILD_SCRIPT.sh  BUILD_VARIANTS.md  CHANGELOG.md  COMPLETE_FEATURE_ROADMAP.md  CONSISTENCY_VERIFICATION.md  CREDITS.md  DEVELOPMENT_HISTORY.md  DIAGNOSTIC_REPORT.md  DOWNLOAD_AND_TEST.md  EXECUTIVE_HANDOFF.md  FINAL_BUILD_SUMMARY.md  FINAL_MERGE_REPORT.md  FINAL_SUMMARY.md  FIXES_AND_OPTIMIZATIONS.md  Full-dependencies-plan.md  GPT2_TROUBLESHOOTING.md  GPU_ACCELERATION_RESEARCH.md  GPU_IMPLEMENTATION_STATUS.md  IMPLEMENTATION-SESSION-2025-11-15.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  KNOWN-ISSUES.md  (+63 more)
.github/workflows/: android-build.yml
adaptheon/core/knowledge/: KnowledgeCore.kt
adaptheon/core/llm/: LLMCore.kt
adaptheon/core/memory/: LongTermMemory.kt  MemoryConsolidation.kt  ShortTermMemory.kt
adaptheon/core/vector/: VectorCore.kt
adaptheon/services/audio/: AudioService.kt
app/: build.gradle.kts  build.gradle.kts.original  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: websearch_config.yaml
app/src/main/assets/embeddings/: config.json  model_quantized.onnx
app/src/main/assets/models/whisper/: README.md
app/src/main/cpp/: CMakeLists.txt  ailive_audio.cpp  ailive_llm.cpp  ailive_llm_fallback.cpp
app/src/main/java/com/ailive/: AILiveApplication.kt  AILiveCore.kt  MainActivity.kt  MainActivityRefactored.kt  SetupActivity.kt
app/src/main/java/com/ailive/ai/audio/: WhisperAssetExtractor.kt  WhisperManager.kt
app/src/main/java/com/ailive/ai/embeddings/: AssetExtractor.kt  BGEInitializer.kt
app/src/main/java/com/ailive/ai/knowledge/: KnowledgeGraphManager.kt
app/src/main/java/com/ailive/ai/llm/: HybridModelManager.kt  LLMBridge.kt  LLMManager.kt  ModelDownloadManager.kt  ModelIntegrityVerifier.kt  ModelSettings.kt  PerformanceMetrics.kt  QwenVLTokenizer.kt  SapientHRMManager.kt  SimpleGPT2Tokenizer.kt  VisionPreprocessor.kt
app/src/main/java/com/ailive/ai/memory/: EmbeddingModelManager.kt  ExtractedFact.kt  MemoryConsolidationManager.kt  MemoryModelManager.kt
app/src/main/java/com/ailive/ai/models/: ModelManager.kt
app/src/main/java/com/ailive/ai/orchestrator/: MultiModelOrchestrator.kt
app/src/main/java/com/ailive/ai/vector/: VectorCoreManager.kt
app/src/main/java/com/ailive/ai/vision/: MobileNetV3Manager.kt  VisionManager.kt
app/src/main/java/com/ailive/audio/: AudioManager.kt  CommandRouter.kt  SpeechProcessor.kt  TTSManager.kt  VoiceRecorder.kt  WakeWordDetector.kt  WhisperProcessor.kt
app/src/main/java/com/ailive/camera/: CameraManager.kt
app/src/main/java/com/ailive/core/: AILiveCore.kt
app/src/main/java/com/ailive/core/messaging/: Message.kt  MessageBus.kt  MessagePriority.kt
app/src/main/java/com/ailive/core/state/: BlackboardState.kt  StateManager.kt
app/src/main/java/com/ailive/core/types/: AgentType.kt
app/src/main/java/com/ailive/diagnostics/: CameraDiagnostics.kt
app/src/main/java/com/ailive/emotion/: EmotionAI.kt
app/src/main/java/com/ailive/example/: AILiveExample.kt  AILiveSystemDemo.kt
app/src/main/java/com/ailive/location/: LocationManager.kt
app/src/main/java/com/ailive/memory/: MemoryAI.kt
app/src/main/java/com/ailive/memory/database/: MemoryDatabase.kt
app/src/main/java/com/ailive/memory/embeddings/: TextEmbedder.kt
app/src/main/java/com/ailive/memory/managers/: ConversationMemoryManager.kt  FactExtractor.kt  LongTermMemoryManager.kt  MemoryManager.kt  UnifiedMemoryManager.kt  UserProfileManager.kt
app/src/main/java/com/ailive/memory/storage/: MemoryEntry.kt  MemoryStore.kt  VectorDB.kt
app/src/main/java/com/ailive/meta/: MetaAI.kt
app/src/main/java/com/ailive/motor/: ActionResult.kt  MotorAI.kt
app/src/main/java/com/ailive/personality/: PersonalityEngine.kt  SentenceDetector.kt  ToolExecutionListener.kt
app/src/main/java/com/ailive/predictive/: PredictiveAI.kt
app/src/main/java/com/ailive/reward/: RewardAI.kt
app/src/main/java/com/ailive/settings/: AISettings.kt
app/src/main/java/com/ailive/stats/: StatisticsManager.kt
app/src/main/java/com/ailive/testing/: TermuxRunner.kt  TestScenarios.kt
app/src/main/java/com/ailive/ui/: MemoryActivity.kt  ModelSettingsActivity.kt  ModelSetupDialog.kt
app/src/main/java/com/ailive/utils/: TestDataGenerator.kt
app/src/main/java/com/ailive/websearch/: WebSearchManager.kt
app/src/main/res/drawable/: button_neon.xml  button_toggle_off.xml  button_toggle_on.xml  futuristic_background.xml  gradient_overlay.xml  input_field_background.xml
app/src/main/res/layout/: activity_main.xml  activity_model_settings.xml  activity_setup.xml  fragment_dashboard.xml  tool_status_card.xml  view_feedback_chart.xml  view_pattern_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/ailive/: LLMManagerTest.kt  ModelManagerTest.kt  PersonalityEngineTest.kt
docs/: BGE_EMBEDDING_INTEGRATION.md  DEBUGGING_GUIDE.md  MEMORY_MODEL_ARCHITECTURE.md  MEMORY_SYSTEM_DIAGNOSIS.md  WEB_SEARCH_INTEGRATION.md
docs/archive/: PHASE_2.2_PLAN.md  PHASE_2.3_TESTING.md  REFACTORING_PHASE1_COMPLETE.md  SECOND_ROUND_FIXES.md  SESSION_HANDOFF_OCT28.md  SESSION_HANDOFF_OCT29.md  UX_FIXES_TESTING_GUIDE.md
docs/archive/phases/: PHASE4_COMPLETE.md  PHASE5_TOOL_EXPANSION.md  PHASE6.1_DASHBOARD_COMPLETE.md  PHASE6.1_TESTING_CHECKLIST.md  PHASE6.2_DATA_VISUALIZATION_PLAN.md  SESSION_PHASE6.1_SUMMARY.md  TOMORROW_START_HERE.md
licenses/: APACHE-2.0-LICENSE.txt  MIT-LICENSE.txt
logs/: DEBUG_REPORT_20251028_074232.md  DEBUG_REPORT_20251028_083209.md
models/: MODEL_SETUP.md  README.md
scripts/: fix_build_errors.sh  setup_opencl.sh
(+60 files in other folders)
